// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse html 1`] = `
[
  {
    "content": [
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example1",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example2",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
        ],
        "type": "tableRow",
      },
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example3",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example4",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
]
`;

exports[`parse markdown 1`] = `
[
  {
    "content": [
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example1",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example2",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableHeader",
          },
        ],
        "type": "tableRow",
      },
      {
        "content": [
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example3",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
          {
            "attrs": {
              "colspan": 1,
              "colwidth": null,
              "rowspan": 1,
            },
            "content": [
              {
                "content": [
                  {
                    "text": "example4",
                    "type": "text",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
]
`;

exports[`serialize > header in body 1`] = `
<table>
  <tbody>
    <tr>
      <th>
        example1
      </th>
    </tr>
    <tr>
      <th>
        example3
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > multiline cell 1`] = `
<table>
  <tbody>
    <tr>
      <th>
        <p>
          example1
        </p>
        <p>
          example2
        </p>
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > no header 1`] = `
<table>
  <tbody>
    <tr>
      <td>
        example1
      </td>
    </tr>
    <tr>
      <td>
        example3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > with colspan 1`] = `
<table>
  <tbody>
    <tr>
      <th colspan="2">
        example1
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > with rowspan 1`] = `
<table>
  <tbody>
    <tr>
      <th rowspan="2">
        example1
      </th>
    </tr>
  </tbody>
</table>
`;
